Готовое приложение без иконки

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,18 @@
         style="@style/Widget.Design.BottomNavigationView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:backgroundTint="#9A2E3CFE"
+        android:backgroundTint="#00FFFFFF"
         android:filterTouchesWhenObscured="false"
         android:hapticFeedbackEnabled="true"
         android:keepScreenOn="false"
+        android:splitMotionEvents="false"
         android:stateListAnimator="@android:animator/fade_in"
         android:theme="@style/Widget.Design.BottomNavigationView"
-        app:elevation="8dp"
+        app:backgroundTint="@color/colorPrimary"
+        app:elevation="10dp"
         app:itemHorizontalTranslationEnabled="false"
-        app:itemTextColor="#2E3CFE"
+        app:itemIconTint="@color/colorAccent"
+        app:itemTextColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
