--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,9 +19,10 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
             app:contentScrim="@color/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
 
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
 
 
@@ -66,6 +67,7 @@
         android:background="@drawable/radius_item"
         android:backgroundTint="@color/colorAccent"
         android:elevation="4dp"
+        android:paddingBottom="5dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
 
@@ -75,7 +77,7 @@
             android:layout_height="wrap_content"
             android:padding="20dp"
             android:text="Выбери интересующие тебя замены на сайте "
-            android:textAlignment="viewStart"
+            android:textAlignment="inherit"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp" />
     </androidx.core.widget.NestedScrollView>
